@@ -17,6 +17,7 @@ git-annex (8.20200720.2) UNRELEASED; urgency=medium
   * Deal with unusual IFS settings in the shell scripts for linux
     standalone and OSX app.
     Thanks, Yaroslav Halchenko
+  * Slightly sped up the linux standalone bundle.
 
  -- Joey Hess <id@joeyh.name>  Tue, 21 Jul 2020 12:58:30 -0400
 
